--- a/Class-2/SelectorExercise/selectors.css
+++ b/Class-2/SelectorExercise/selectors.css
@@ -2,86 +2,84 @@
 DO NOT ALTER THE EXISTING HTML TO DO THIS.  WRITE ONLY CSS!
 
 /* Give the <body> element a background of #bdc3c7*/
-body{
-    background-color: #bdc3c7;
+body {
+  background-color: #bdc3c7;
 }
 
-
-/* Make the <h1> element #9b59b6*/
-
-
-
-
+/* Make the <h1> element */
+h1 {
+  color: #9b59b6;
+}
 
 /* Make all <h2> elements orange */
+h2 {
+  color: orange;
+}
 
+/* Make all <li> elements blue(pick your own hexadecimal blue)*/
 
-/* Make all <li> elements blue(pick your own hexadecimal blue)*/ 
-
-
-
+ul li {
+  color: rgb(133, 133, 180);
+}
 
 /*Change the background on every paragraph to be yellow*/
 
-
-
+p {
+  background-color: rgb(118, 118, 82);
+}
 
 /*Make all inputs have a 3px red border*/
 
-
-
+input {
+  border: 2px solid rgb(125, 31, 31);
+}
+ul li input[type="checkbox"] {
+  border: 3px solid rgb(186, 18, 18);
+}
 /* Give everything with the class 'hello' a white background*/
-
-
+.hello {
+  background: white;
+}
 
 /* Give the element with id 'special' a 2px solid blue border(pick your own rgb blue)*/
-
-
-
+#special {
+  border: 2px solid blue;
+}
 
 /*Make all the <p>'s that are nested inside of divs 25px font(font-size: 25px)*/
-
-
-
+div p {
+  font-size: 25px;
+}
 
 /*Make only inputs with type 'text' have a gray background*/
-
-
+input[type="text"] {
+  background-color: grey;
+}
 
 /* Give both <p>'s inside the 3rd <div> a pink background*/
-
-
+div:nth-of-type(3) p {
+  background-color: pink;
+}
 
 /* Give the 2nd <p> inside the 3rd <div> a 5px white border*/
-
-
-
+div:nth-of-type(3) p:nth-of-type(2) {
+  border: 5px solid white;
+}
 
 /* Make the <em> in the 3rd <div> element white and 20px font(font-size:20px)*/
-
-
-
-
+div:nth-of-type(3) em {
+  color: white;
+  font-size: 20px;
+}
 
 /*BONUS CHALLENGES*/
 
-	
 /*Make all "checked" checkboxes have a left margin of 50px(margin-left: 50px)*/
-
-
-
 
 /* Make the <label> elements all UPPERCASE without changing the HTML(definitely look this one up*/
 
-
-
 /*Make the first letter of the element with id 'special' green and 100px font size(font-size: 100)*/
-
-
 
 /*Make the <h1> element's color change to blue when hovered over */
 
-
-
 /*Make the <a> element's that have been visited gray */
-
