--- a/Class-2/SelectorExercise/selectors.css
+++ b/Class-2/SelectorExercise/selectors.css
@@ -31,7 +31,7 @@ p {
 /*Make all inputs have a 3px red border*/
 
 input {
-  border: 2px solid rgb(125, 31, 31);
+  border: 3px solid rgb(125, 31, 31);
 }
 ul li input[type="checkbox"] {
   border: 3px solid rgb(186, 18, 18);
@@ -75,11 +75,24 @@ div:nth-of-type(3) em {
 /*BONUS CHALLENGES*/
 
 /*Make all "checked" checkboxes have a left margin of 50px(margin-left: 50px)*/
+input[type="checkbox"]:checked {
+  margin-left: 50px;
+}
 
 /* Make the <label> elements all UPPERCASE without changing the HTML(definitely look this one up*/
+label {
+  text-transform: uppercase;
+}
 
 /*Make the first letter of the element with id 'special' green and 100px font size(font-size: 100)*/
+#special::first-letter {
+  color: green;
+  font-size: 100px;
+}
 
 /*Make the <h1> element's color change to blue when hovered over */
+h1:hover {
+  color: blue;
+}
 
 /*Make the <a> element's that have been visited gray */
